# trusted-news

./: .dockerignore  .env.example  .gitignore  CHECK_METRICS.md  DEPLOY.md  DEPLOY_TROUBLESHOOTING.md  DOCKER.md  Dockerfile  GRAFANA.md  README.md  SSH_SETUP.md  config.py  docker-compose.yml  pyproject.toml  simple_bot.py
.github/workflows/: README.md  ci-cd.yml
configs/: README.md  alloy.config.river
docker/: README.md  docker-compose.prod.yml  docker-compose.yml
docs/: CHECK_METRICS.md  CHECK_METRICS_COMMANDS.md  DEPLOY.md  DEPLOY_TROUBLESHOOTING.md  DOCKER.md  ENV_CONFIG.md  PROJECT_STRUCTURE.md  README.md  SETUP.md
scripts/: README.md  diagnose_metrics.sh  test_parser.sh
src/agents/: pytest.ini
src/bot/: Dockerfile  config.py  metrics.py  pyproject.toml  pytest.ini  simple_bot.py
src/bot/tests/: __init__.py  conftest.py  test_config.py  test_simple_bot.py
src/database/: pytest.ini
src/parser/: Dockerfile  go.mod  main.go  main_test.go
